--- a/app/javascript/mastodon/locales/cs.json
+++ b/app/javascript/mastodon/locales/cs.json
@@ -76,7 +76,7 @@
   "compose_form.poll.option_placeholder": "Volba {number}",
   "compose_form.poll.remove_option": "Odstranit tuto volbu",
   "compose_form.publish": "Tootnout",
-  "compose_form.publish_loud": "",
+  "compose_form.publish_loud": "{publish}!",
   "compose_form.sensitive.hide": "Označit média jako citlivá",
   "compose_form.sensitive.marked": "Média jsou označena jako citlivá",
   "compose_form.sensitive.unmarked": "Média nejsou označena jako citlivá",
@@ -169,7 +169,7 @@
   "introduction.interactions.action": "Dokončit tutoriál!",
   "introduction.interactions.favourite.headline": "Oblíbení",
   "introduction.interactions.favourite.text": "Oblíbením si můžete uložit toot na později a dát jeho autorovi vědět, že se vám líbí.",
-  "introduction.interactions.reblog.headline": "",
+  "introduction.interactions.reblog.headline": "Boost",
   "introduction.interactions.reblog.text": "Boostnutím můžete sdílet tooty jiných lidí s vašimi sledujícími.",
   "introduction.interactions.reply.headline": "Odpověď",
   "introduction.interactions.reply.text": "Můžete odpovídat na tooty jiných lidí i vaše vlastní, což je propojí do konverzace.",
@@ -307,7 +307,7 @@
   "search.placeholder": "Hledat",
   "search_popout.search_format": "Pokročilé hledání",
   "search_popout.tips.full_text": "Jednoduchý text navrátí tooty, které jste napsal/a, oblíbil/a si, boostnul/a, nebo v nich byl/a zmíněn/a, a také odpovídající přezdívky, zobrazovaná jména a hashtagy.",
-  "search_popout.tips.hashtag": "",
+  "search_popout.tips.hashtag": "hashtag",
   "search_popout.tips.status": "toot",
   "search_popout.tips.text": "Jednoduchý text navrátí odpovídající zobrazovaná jména, přezdívky a hashtagy",
   "search_popout.tips.user": "uživatel",
