--- a/app/javascript/mastodon/locales/fa.json
+++ b/app/javascript/mastodon/locales/fa.json
@@ -76,7 +76,7 @@
   "compose_form.poll.option_placeholder": "گزینهٔ {number}",
   "compose_form.poll.remove_option": "حذف این گزینه",
   "compose_form.publish": "بوق",
-  "compose_form.publish_loud": "",
+  "compose_form.publish_loud": "{publish}!",
   "compose_form.sensitive.hide": "علامت‌گذاری به عنوان حساس",
   "compose_form.sensitive.marked": "این تصویر به عنوان حساس علامت‌گذاری شده",
   "compose_form.sensitive.unmarked": "این تصویر به عنوان حساس علامت‌گذاری نشده",
