--- a/app/javascript/mastodon/locales/ko.json
+++ b/app/javascript/mastodon/locales/ko.json
@@ -76,7 +76,7 @@
   "compose_form.poll.option_placeholder": "{number}번 항목",
   "compose_form.poll.remove_option": "이 항목 삭제",
   "compose_form.publish": "툿",
-  "compose_form.publish_loud": "",
+  "compose_form.publish_loud": "{publish}!",
   "compose_form.sensitive.hide": "미디어를 민감함으로 설정하기",
   "compose_form.sensitive.marked": "미디어가 열람주의로 설정되어 있습니다",
   "compose_form.sensitive.unmarked": "미디어가 열람주의로 설정 되어 있지 않습니다",
