--- a/app/javascript/mastodon/locales/sq.json
+++ b/app/javascript/mastodon/locales/sq.json
@@ -17,7 +17,7 @@
   "account.hide_reblogs": "Fshih përforcime nga @{name}",
   "account.link_verified_on": "Pronësia e kësaj lidhjeje qe kontrolluar më {date}",
   "account.locked_info": "Gjendja e privatësisë së kësaj llogarie është caktuar si e kyçur. I zoti merr dorazi në shqyrtim cilët mund ta ndjekin.",
-  "account.media": "",
+  "account.media": "Media",
   "account.mention": "Përmendni @{name}",
   "account.moved_to": "{name} ka kaluar te:",
   "account.mute": "Heshtoni @{name}",
@@ -71,20 +71,20 @@
   "compose_form.lock_disclaimer": "Llogaria juaj s’është {locked}. Mund ta ndjekë cilido, për të parë postimet tuaja vetëm për ndjekësit.",
   "compose_form.lock_disclaimer.lock": "e bllokuar",
   "compose_form.placeholder": "Ç’bluani në mendje?",
-  "compose_form.poll.add_option": "",
-  "compose_form.poll.duration": "",
-  "compose_form.poll.option_placeholder": "",
-  "compose_form.poll.remove_option": "",
+  "compose_form.poll.add_option": "Add a choice",
+  "compose_form.poll.duration": "Poll duration",
+  "compose_form.poll.option_placeholder": "Choice {number}",
+  "compose_form.poll.remove_option": "Remove this choice",
   "compose_form.publish": "Mesazh",
-  "compose_form.publish_loud": "",
-  "compose_form.sensitive.hide": "",
+  "compose_form.publish_loud": "{publish}!",
+  "compose_form.sensitive.hide": "Mark media as sensitive",
   "compose_form.sensitive.marked": "Media është shënuar si rezervat",
   "compose_form.sensitive.unmarked": "Media s’është shënuar si rezervat",
   "compose_form.spoiler.marked": "Teksti është fshehur pas sinjalizimit",
   "compose_form.spoiler.unmarked": "Teksti s’është i fshehur",
   "compose_form.spoiler_placeholder": "Shkruani këtu sinjalizimin tuaj",
   "confirmation_modal.cancel": "Anuloje",
-  "confirmations.block.block_and_report": "",
+  "confirmations.block.block_and_report": "Block & Report",
   "confirmations.block.confirm": "Bllokoje",
   "confirmations.block.message": "Jeni i sigurt se doni të bllokohet {name}?",
   "confirmations.delete.confirm": "Fshije",
@@ -118,7 +118,7 @@
   "emoji_button.symbols": "Simbole",
   "emoji_button.travel": "Udhëtime & Vende",
   "empty_column.account_timeline": "S’ka mesazhe këtu!",
-  "empty_column.account_unavailable": "",
+  "empty_column.account_unavailable": "Profile unavailable",
   "empty_column.blocks": "S’keni bllokuar ende ndonjë përdorues.",
   "empty_column.community": "Rrjedha kohore vendore është e zbrazët. Shkruani diçka publikisht që t’i hyhet valles!",
   "empty_column.direct": "S’keni ende ndonjë mesazh të drejtpërdrejt. Kur dërgoni ose merrni një të tillë, ai do të shfaqet këtu.",
@@ -147,8 +147,8 @@
   "hashtag.column_header.tag_mode.all": "dhe {additional}",
   "hashtag.column_header.tag_mode.any": "ose {additional}",
   "hashtag.column_header.tag_mode.none": "pa {additional}",
-  "hashtag.column_settings.select.no_options_message": "",
-  "hashtag.column_settings.select.placeholder": "",
+  "hashtag.column_settings.select.no_options_message": "No suggestions found",
+  "hashtag.column_settings.select.placeholder": "Enter hashtags…",
   "hashtag.column_settings.tag_mode.all": "Krejt këto",
   "hashtag.column_settings.tag_mode.any": "Cilëndo prej këtyre",
   "hashtag.column_settings.tag_mode.none": "Asnjë prej këtyre",
@@ -156,9 +156,9 @@
   "home.column_settings.basic": "Bazë",
   "home.column_settings.show_reblogs": "Shfaq përforcime",
   "home.column_settings.show_replies": "Shfaq përgjigje",
-  "intervals.full.days": "",
-  "intervals.full.hours": "",
-  "intervals.full.minutes": "",
+  "intervals.full.days": "{number, plural, one {# day} other {# days}}",
+  "intervals.full.hours": "{number, plural, one {# hour} other {# hours}}",
+  "intervals.full.minutes": "{number, plural, one {# minute} other {# minutes}}",
   "introduction.federation.action": "Pasuesi",
   "introduction.federation.federated.headline": "Të federuara",
   "introduction.federation.federated.text": "Postimet publike nga shërbyes të tjerë të fediversit do të shfaqen te rrjedha kohore e të federuarve.",
@@ -204,19 +204,19 @@
   "keyboard_shortcuts.search": "për kalim fokusi te kërkimi",
   "keyboard_shortcuts.start": "për hapjen e shtyllës \"fillojani\"",
   "keyboard_shortcuts.toggle_hidden": "për shfaqje/fshehje teksti pas CW",
-  "keyboard_shortcuts.toggle_sensitivity": "",
+  "keyboard_shortcuts.toggle_sensitivity": "to show/hide media",
   "keyboard_shortcuts.toot": "për të filluar një mesazh fringo të ri",
   "keyboard_shortcuts.unfocus": "për heqjen e fokusit nga fusha e hartimit të mesazheve apo kërkimeve",
   "keyboard_shortcuts.up": "për ngjitje sipër nëpër listë",
   "lightbox.close": "Mbylle",
   "lightbox.next": "Pasuesja",
   "lightbox.previous": "E mëparshmja",
-  "lightbox.view_context": "",
+  "lightbox.view_context": "View context",
   "lists.account.add": "Shto në listë",
   "lists.account.remove": "Hiqe nga lista",
   "lists.delete": "Fshije listën",
   "lists.edit": "Përpunoni listën",
-  "lists.edit.submit": "",
+  "lists.edit.submit": "Change title",
   "lists.new.create": "Shtoni listë",
   "lists.new.title_placeholder": "Titull liste të re",
   "lists.search": "Kërkoni mes personash që ndiqni",
@@ -237,7 +237,7 @@
   "navigation_bar.favourites": "Të parapëlqyer",
   "navigation_bar.filters": "Fjalë të heshtuara",
   "navigation_bar.follow_requests": "Kërkesa për ndjekje",
-  "navigation_bar.follows_and_followers": "",
+  "navigation_bar.follows_and_followers": "Follows and followers",
   "navigation_bar.info": "Mbi këtë shërbyes",
   "navigation_bar.keyboard_shortcuts": "Taste përkatës",
   "navigation_bar.lists": "Lista",
@@ -246,13 +246,13 @@
   "navigation_bar.personal": "Personale",
   "navigation_bar.pins": "Mesazhe të fiksuar",
   "navigation_bar.preferences": "Parapëlqime",
-  "navigation_bar.profile_directory": "",
+  "navigation_bar.profile_directory": "Profile directory",
   "navigation_bar.public_timeline": "Rrjedhë kohore të federuarish",
   "navigation_bar.security": "Siguri",
   "notification.favourite": "{name} parapëlqeu gjendjen tuaj",
   "notification.follow": "{name} zuri t’ju ndjekë",
   "notification.mention": "{name} ju ka përmendur",
-  "notification.poll": "",
+  "notification.poll": "A poll you have voted in has ended",
   "notification.reblog": "{name} përforcoi gjendjen tuaj",
   "notifications.clear": "Pastroji njoftimet",
   "notifications.clear_confirmation": "Jeni i sigurt se doni të pastrohen përgjithmonë krejt njoftimet tuaja?",
@@ -263,7 +263,7 @@
   "notifications.column_settings.filter_bar.show": "Shfaq",
   "notifications.column_settings.follow": "Ndjekës të rinj:",
   "notifications.column_settings.mention": "Përmendje:",
-  "notifications.column_settings.poll": "",
+  "notifications.column_settings.poll": "Poll results:",
   "notifications.column_settings.push": "Njoftime Push",
   "notifications.column_settings.reblog": "Përforcime:",
   "notifications.column_settings.show": "Shfaq në shtylla",
@@ -273,14 +273,14 @@
   "notifications.filter.favourites": "Të parapëlqyer",
   "notifications.filter.follows": "Ndjekje",
   "notifications.filter.mentions": "Përmendje",
-  "notifications.filter.polls": "",
+  "notifications.filter.polls": "Poll results",
   "notifications.group": "{count}s njoftime",
-  "poll.closed": "",
-  "poll.refresh": "",
-  "poll.total_votes": "",
-  "poll.vote": "",
-  "poll_button.add_poll": "",
-  "poll_button.remove_poll": "",
+  "poll.closed": "Closed",
+  "poll.refresh": "Refresh",
+  "poll.total_votes": "{count, plural, one {# vote} other {# votes}}",
+  "poll.vote": "Vote",
+  "poll_button.add_poll": "Add a poll",
+  "poll_button.remove_poll": "Remove poll",
   "privacy.change": "Rregulloni privatësi gjendje",
   "privacy.direct.long": "Postoja vetëm përdoruesve të përmendur",
   "privacy.direct.short": "I drejtpërdrejtë",
@@ -292,11 +292,11 @@
   "privacy.unlisted.short": "Jo në lista",
   "regeneration_indicator.label": "Po ngarkohet…",
   "regeneration_indicator.sublabel": "Prurja juaj vetjake po përgatiteet!",
-  "relative_time.days": "",
-  "relative_time.hours": "",
+  "relative_time.days": "{number}d",
+  "relative_time.hours": "{number}h",
   "relative_time.just_now": "tani",
-  "relative_time.minutes": "",
-  "relative_time.seconds": "",
+  "relative_time.minutes": "{number}m",
+  "relative_time.seconds": "{number}s",
   "reply_indicator.cancel": "Anuloje",
   "report.forward": "Përcillja {target}",
   "report.forward_hint": "Llogaria është nga një shërbyes tjetër. Të dërgohet edhe një kopje e anonimizuar e raportimit?",
@@ -307,7 +307,7 @@
   "search.placeholder": "Kërkoni",
   "search_popout.search_format": "Format kërkimi të përparuar",
   "search_popout.tips.full_text": "Kërkimi për tekst të thjeshtë përgjigjet me gjendje që keni shkruar, parapëlqyer, përforcuar, ose ku jeni përmendur, si dhe emra përdoruesish, emra ekrani dhe hashtagë që kanë përputhje me termin e kërkimit.",
-  "search_popout.tips.hashtag": "",
+  "search_popout.tips.hashtag": "hashtag",
   "search_popout.tips.status": "gjendje",
   "search_popout.tips.text": "Kërkim për tekst të thjeshtë përgjigjet me emra, emra përdoruesish dhe hashtagë që kanë përputhje me termin e kërkimit",
   "search_popout.tips.user": "përdorues",
@@ -361,17 +361,17 @@
   "tabs_bar.local_timeline": "Vendore",
   "tabs_bar.notifications": "Njoftime",
   "tabs_bar.search": "Kërkim",
-  "time_remaining.days": "",
-  "time_remaining.hours": "",
-  "time_remaining.minutes": "",
-  "time_remaining.moments": "",
-  "time_remaining.seconds": "",
+  "time_remaining.days": "{number, plural, one {# day} other {# days}} left",
+  "time_remaining.hours": "{number, plural, one {# hour} other {# hours}} left",
+  "time_remaining.minutes": "{number, plural, one {# minute} other {# minutes}} left",
+  "time_remaining.moments": "Moments remaining",
+  "time_remaining.seconds": "{number, plural, one {# second} other {# seconds}} left",
   "trends.count_by_accounts": "{count} {rawCount, plural, një {person} {people} të tjerë} po flasin",
   "ui.beforeunload": "Skica juaj do të humbë nëse dilni nga Mastodon-i.",
   "upload_area.title": "Merreni & vëreni që të ngarkohet",
   "upload_button.label": "Shtoni media (JPEG, PNG, GIF, WebM, MP4, MOV)",
   "upload_error.limit": "U tejkalua kufi ngarkimi kartelash.",
-  "upload_error.poll": "",
+  "upload_error.poll": "File upload not allowed with polls.",
   "upload_form.description": "Përshkruajeni për persona me probleme shikimi",
   "upload_form.focus": "Ndryshoni parapamjen",
   "upload_form.undo": "Fshije",
